[gd_scene load_steps=3 format=3 uid="uid://d3soqqlkvvbbp"]

[ext_resource type="Script" path="res://scripts/gui/multiplayer_menu.gd" id="1_7u6sm"]
[ext_resource type="PackedScene" uid="uid://w6qkohd2ejme" path="res://scenes/golfball.tscn" id="2_52pmy"]

[node name="MultiplayerMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 271.0
offset_top = 98.0
offset_right = -271.0
offset_bottom = -98.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_7u6sm")
player_scene = ExtResource("2_52pmy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 182.0
offset_right = -182.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Host" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join"

[connection signal="pressed" from="VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
